[package]
name = "eth_trie_solana"
version = "0.1.0"
description = "Ethereum-compatible Merkle-Patricia Trie."
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "solana"]
repository = "https://github.com/zhchiEarth/eth-trie-solana"
homepage = "https://github.com/zhchiEarth/eth-trie-solana"
documentation = "https://docs.rs/eth_trie_solana"

[dependencies]
ethereum-types = "0.14.1"
hashbrown = "0.14.0"
keccak-hash = "0.10.0"
log = "0.4.16"
parking_lot = "0.12"
rlp = "0.5.1"

[dev-dependencies]
rand = "0.8.3"
hex = "0.4.2"
criterion = "0.5.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
